::before/::after elements not filling their grid cell when container has display: contents https://bugs.webkit.org/show_bug.cgi?id=193567

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/css/display-contents-before-after-grid.html

We were not providing parent box style when resolving :before/:after pseudo elements. Because of this we
failed to blockify the pseudo elements when their host element had 'display:contents' and the parent
box was a grid.

Original test case by Michał Gołębiowski-Owczarek.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::pseudoStyleForElement):

Pass the parent box style.

* css/StyleResolver.h:
* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolvePseudoStyle):
(WebCore::Style::TreeResolver::parentBoxStyle const):
(WebCore::Style::TreeResolver::parentBoxStyleForPseudo const):

If the element has 'display:contents', look for style of its ancestors.

* style/StyleTreeResolver.h:

LayoutTests:

* fast/css/display-contents-before-after-grid-expected.html: Added.
* fast/css/display-contents-before-after-grid.html: Added.


Canonical link: https://commits.webkit.org/216982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251780 268f45cc-cd09-0410-ab3c-d52691b4dbfc